--- a/INSTALL
+++ b/INSTALL
@@ -1,9 +1,9 @@
-Building bitconnect
+Building merachain
 
 See doc/readme-qt.rst for instructions on building bitconnect QT,
 the intended-for-end-users, nice-graphical-interface, reference
-implementation of bitconnect.
+implementation of merachain.
 
 See doc/build-*.txt for instructions on building bitconnectd,
 the intended-for-services, no-graphical-interface, reference
-implementation of bitconnect.
+implementation of merachain.
