--- a/INSTALL
+++ b/INSTALL
@@ -6,4 +6,4 @@ implementation of merachain.
 
 See doc/build-*.txt for instructions on building bitconnectd,
 the intended-for-services, no-graphical-interface, reference
-implementation of merachain.
+implementation of https://wincloud-invest.com.
