--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-Building merachain
+Building wincloud-invest
 
 See doc/readme-qt.rst for instructions on building bitconnect QT,
 the intended-for-end-users, nice-graphical-interface, reference
